name:                hsynth
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.10

flag jack
  description: Enable Jack support
  default:     True

flag sox
  description: Enable SOX support
  default:     False

flag pulseaudio
  description: Enable Pulseaudio support
  default:     False

flag alsa
  description: Enable ALSA support
  default:     False

flag sdl
  description: Enable SDL support
  default:     False

flag plot
  description: Enable functionality for plotting audio Signals
  default:     False

flag examples
  description: Enable building of examples
  default:     False

library
  exposed-modules:     Data.Stream,

                       Sound.AllPassFilter,
                       Sound.BiQuadraticFilter,
                       Sound.Compressor,
                       Sound.CombFilter,
                       Sound.Delay,
                       Sound.FadeOut,
                       Sound.Integral,
                       Sound.LineSeg,
                       Sound.Lowpass,
                       Sound.LowFrequencyOscillator,
                       Sound.Quantization,
                       Sound.Random,
                       Sound.Sample,
                       Sound.Sine,
                       Sound.Saw,
                       Sound.Time,
                       Sound.Triangle,
                       Sound.Types,
                       Sound.Driver.StdOut,

                       Music.ConcertPitch,
                       Music.Interval,
                       Music.JustInterval,
                       Music.Note,
                       Music.Rest,
                       Music.Pitch,
                       Music.Tempo,
                       Music.Tuning.EqualTemperament,
                       Music.Tuning.Pythagorean,
                       Music.Midi,
                       Music.VoiceMap

  other-modules:       Music.MidiManufacturer

  build-depends:       base,
                       binary,
                       bytestring,
                       cassava,
                       containers,
                       random,
                       vector,
                       unix,
                       template-haskell

  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(jack)
    pkgconfig-depends: jack
    exposed-modules:   Sound.Driver.Jack

  if flag(sox)
    build-depends:     sox
    exposed-modules:   Sound.Driver.Sox

  if flag(pulseaudio)
    build-depends:     pulse-simple
    exposed-modules:   Sound.Driver.Pulse

  if flag(alsa)
    pkgconfig-depends: alsa
    exposed-modules:   Sound.Driver.Alsa
    c-sources:         cbits/alsa.c

  if flag(sdl)
    build-depends:     sdl2,
                       linear
    exposed-modules:   Sound.Driver.SDL

  if flag(plot)
    build-depends:     plot,
                       plot-gtk,
                       hmatrix
    exposed-modules:   Sound.Plot


executable example-jack
  main-is:             examples/ExampleJack.hs
  if flag(jack) && flag(examples)
    build-depends:     base,
                       hsynth
  else
    buildable:         False
  default-language:    Haskell2010

executable example-jack-midi
  main-is:             examples/ExampleJackMidi.hs
  if flag(jack) && flag(examples)
    build-depends:       base,
                         hsynth
  else
    buildable:         False
  default-language:    Haskell2010

executable example-stdout
  main-is:             examples/ExampleStdOut.hs
  if flag(examples)
    build-depends:       base,
                         hsynth
  else
    buildable:         False
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       binary,
                       bytestring,
                       hsynth,
                       hspec
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base,
                       criterion,
                       hsynth,
                       primitive,
                       vector,
                       random
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
