name:                hsynth
version:             0.2.0.0
synopsis:            Modular synthesizer for Haskell using DSLs
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
copyright:           Copyright (c) 2015, Sven Keidel
category:            Language
build-type:          Simple
cabal-version:       >=1.10

flag jack
  description: Enable Jack support
  default:     False

flag examples
  description: Enable examples
  default:     False

library
  exposed-modules:     Data.MidiFile,
                       Data.MidiMessage,
                       Data.MidiManufacturer,
                       Data.SMPTE,
                       Language.Frontend
                       Sound.Sine,
                       Sound.Types
  other-modules:       Data.MidiManufacturerTH,
                       Language.Expression,
                       Language.SimpleExpression,
                       Language.GroundExpr,
                       Language.Function,
                       Language.SynArrow,
                       Language.CodeGen.TH
  build-depends:       base >=4 && <5,
                       cassava,
                       mtl,
                       containers,
                       text,
                       vector,
                       binary,
                       bytestring,
                       unix,
                       template-haskell

  ghc-options:         -Wall -O2 -threaded

  if flag(jack)
    pkgconfig-depends: jack
    exposed-modules:   Sound.Driver.Jack

  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-jack
  main-is:             examples/ExampleJack.hs
  if flag(jack) && flag(examples)
    build-depends:     base,
                       hsynth
  else
    buildable:         False
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       binary,
                       bytestring,
                       hsynth,
                       hspec
  default-language:    Haskell2010
