name:                hsynth
version:             0.2.0.0
synopsis:            A audio synthesis library for Haskell
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
copyright:           Copyright (c) 2016, Sven Keidel
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 8.0

flag jack
  description: Enable Jack support
  default:     False

flag examples
  description: Enable examples
  default:     False

flag plot
  description: Enable functionality for plotting audio Signals
  default:     False

library
  exposed-modules:     Data.MidiFile,
                       Data.MidiMessage,
                       Data.MidiManufacturer,
                       Data.SMPTE,
                       Language.Frontend,
                       Data.Stream,
                       Sound.Amplifier,
                       Sound.Oscillators,
                       Sound.Oscillators.Saw,
                       Sound.Oscillators.Sine,
                       Sound.Oscillators.Square,
                       Sound.Oscillators.Triangle,
                       Sound.Types
  other-modules:       Data.MidiManufacturerTH,
                       Language.Constant,
                       Language.Expression,
                       Language.SimpleExpression,
                       Language.GroundExpr,
                       Language.Function,
                       Language.SynArrow,
                       Language.CodeGen.TH,
                       Data.MidiManufacturerTH

  build-depends:       base >=4 && <5,
                       cassava,
                       mtl,
                       containers,
                       text,
                       vector,
                       binary,
                       bytestring,
                       unix,
                       template-haskell,
                       ghc-prim

  ghc-options:         -Wall -O2

  if flag(jack)
    pkgconfig-depends: jack
    exposed-modules:   Sound.Driver.Jack

  if flag(plot)
    build-depends:     plot,
                       plot-gtk,
                       hmatrix
    exposed-modules:   Sound.Plot

  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-jack
  main-is:             examples/ExampleJack.hs
  if flag(jack) && flag(examples)
    build-depends:     base,
                       hsynth
  else
    buildable:         False
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       binary,
                       bytestring,
                       hsynth,
                       hspec
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base,
                       criterion,
                       ghc-prim
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010